tests/snapshots/snapshots__pipeline@grade_final_resume.pr.snap
---
source: tests/snapshots.rs
assertion_line: 14
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/grade_final_resume.pr
---
== tokens ==
VOpen Effect UIdent("Abort") VOpen Ident("never") Ident("abort") LParen KwUnit RParen Colon KwInt VClose VSemi Fn Ident("use_it") LParen RParen Colon KwInt Bang LBrace UIdent("Abort") RBrace Eq Ident("abort") LParen LParen RParen RParen VSemi Fn Ident("main") LParen RParen Eq VOpen Handle Ident("use_it") LParen RParen With VOpen Ident("once") Ident("abort") LParen Ident("u") RParen FatArrow Int(IntLit { value: 5, suffix: None }) VSemi Return Ident("r") FatArrow Ident("r") VClose VClose VClose

== ast ==
Program {
    types: [],
    effects: [
        EffectDecl {
            name: "Abort",
            params: [],
            ops: [
                EffOp {
                    name: "abort",
                    params: [
                        Unit,
                    ],
                    ret: Int,
                    grade: Never,
                },
            ],
            span: 155..193,
        },
    ],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "use_it",
            params: [],
            ret: Some(
                Int,
            ),
            eff: Some(
                [
                    EffLabel {
                        name: "Abort",
                        args: [],
                    },
                ],
            ),
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "abort",
                        ),
                        span: 225..230,
                    },
                    [
                        Spanned {
                            node: Unit,
                            span: 231..233,
                        },
                    ],
                ),
                span: 225..234,
            },
            wheres: [],
            span: 195..234,
        },
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Handle(
                    Spanned {
                        node: Call(
                            Spanned {
                                node: Var(
                                    "use_it",
                                ),
                                span: 257..263,
                            },
                            [],
                        ),
                        span: 257..265,
                    },
                    [
                        Sugar(
                            Once(
                                "abort",
                                [
                                    "u",
                                ],
                                Spanned {
                                    node: Int(
                                        IntLit {
                                            value: 5,
                                            suffix: None,
                                        },
                                    ),
                                    span: 292..293,
                                },
                            ),
                        ),
                        Return(
                            "r",
                            Spanned {
                                node: Var(
                                    "r",
                                ),
                                span: 310..311,
                            },
                        ),
                    ],
                    Exhaustive,
                ),
                span: 250..311,
            },
            wheres: [],
            span: 236..311,
        },
    ],
}

== types ==
[E6028] Type Error: handler clause for `abort` exceeds its declared grade `never` (which never resumes): this clause resumes the continuation
    ╭─[ <source>:10:22 ]
    │
 10 │     once abort(u) => 5
    │                      ┬  
    │                      ╰── handler clause for `abort` exceeds its declared grade `never` (which never resumes): this clause resumes the continuation
────╯
